Reetan.Nayak Dev 25/force-app/main/default/objects/Asset/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>