Reetan.Nayak Dev 25/force-app/main/default/objects/Asset/fields/Entitelemt_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Entitelemt_Indicator__c</fullName>
    <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;CASE( Entitlement_Status__c, &quot;Expired&quot;, &quot;01530000002FPJo&quot;, &quot;Active&quot;, &quot;01530000002FPJp&quot;, &quot;30 Day Warning&quot;, &quot;01530000002FPJq&quot;,&quot;&quot;),&quot;Active Contract?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Indicator</label>
    <type>Text</type>
</CustomField>