Reetan.Nayak Dev 25/force-app/main/default/objects/Asset/fields/Suggested_Products__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Products__c</fullName>
    <label>Suggested Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product 1</fullName>
            </value>
            <value>
                <fullName>Product 2</fullName>
            </value>
            <value>
                <fullName>Product 3</fullName>
            </value>
            <value>
                <fullName>Training Services</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>